- Make prison easier at low security levels
- Some new latex content
- Fix save game being wiped!
- Can change appearance!
- New spells: Shadow Slash, Familiar, Golem, Fire Elemental, Storm Crystal, Shadow Warrior, and Lightning Bolt
- Many spells have smmarter targeting, so you wont waste mana casting summons on an enemy space

2.4
- New sound effects (locked and coins)
- Organized the spell lists by component

TODO Character customizer, change outfit and/or the player character's appearance, either have it save or make it use a code to load

TODO ValidationFindBlockCycles to prevent bugs

TODO Goddess minibosses:
-Rope kraken, many sub-ropes that drag you to center. Casts a spell that attaches ropes, if you have enough attached it replaces your outfit with a swimsuit, leotard, or some kind of lingerie with maybe magical tape gags.
-Steel-clad maids who put you in a maid costume with metal bindings and chastity
-Dragon-girl enemies who tie you in durable leather bindings
-Either slime related stuff or maybe just a latex witch who is very powerful
-Elementals of ice, forge (metal), water (latex), and earth (corsets, boots, mitts), perhaps bringing you to an elemental realm
-Powerful conjurers who summon chains, magic books, and tickling hands
-A ninja clan who uses smokescreens, flash grenades, euphoric drugs, and potentially enchantment spells

TODO
Deputy (slaps on handcuffs only)
Warden (more comprehensive cuffs)
Detective (Stealth, wanders around laying traps throughout the level)
Nurse (applies straitjackets and stuff)
Doctors (Applies sedatives and euphoric drugs)
Troopers (Riot shield and tasers)

Enemy ideas:
-Silent sentinel, triggers ambush when the player casts a verbal spell, tries to gag the player

Future content planned:
- Wand item which reduces mana costs but is terrible for melee
- Witches should drop their respective spells sometimes if you don't already have them